# SyncDisBoi

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile  shell.nix
.github/workflows/: build.yml
src/: args.rs  build_api.rs  export.rs  import.rs  lib.rs  main.rs  music_api.rs  sync.rs  utils.rs
src/deezer/: mod.rs  model.rs  response.rs
src/spotify/: mod.rs  model.rs  response.rs
src/tidal/: mod.rs  model.rs  response.rs
src/yt_music/: mod.rs  model.rs  response.rs
