[package]
name = "sync_dis_boi"
version = "0.5.10"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
clap = { version = "*", features = ["derive", "env"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
futures = "0.3.31"
iso8601 = "0.6.3"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strsim = "0.11.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webbrowser = "1.0.5"
