[package]
name = "sync_dis_boi"
version = "0.6.1"
edition = "2024"
license-file = "LICENSE.txt"
description = "a music streaming platform synchronization tool"
repository = "https://github.com/SilentVoid13/SyncDisBoi"
categories = ["command-line-utilities"]
keywords = ["music", "spotify", "tidal", "youtube-music"]

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.88"
clap = { version = "4.5.42", features = ["derive", "env"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
futures = "0.3.31"
iso8601 = "0.6.3"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["cookies", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strsim = "0.11.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webbrowser = "1.0.5"
